third_party/move/tools/move-decompiler/tests/compiler-v2-test/more-v1/translated_ir_tests/move/signer/double_signer.exp
script {
    entry fun <SELF>_0(_s: signer, _s2: signer) {
        ()
    }
}

script {
    entry fun <SELF>_1(_s: signer, _s2: signer, _u: u64) {
        ()
    }
}

script {
    entry fun <SELF>_2(_s: signer, _u: u64, _s2: signer) {
        ()
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ double_signer.move:2:15
  │
2 │     entry fun <SELF>_0(_s: signer, _s2: signer) {
  │               ^
  │               │
  │               Unexpected '<'
  │               Expected an identifier
